--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="half-class">
             <h1>Welcome to </h1>
             <h1><span class="orange_class"> Md Asaduzaman</span> world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste sit beatae alias molestias, maiores illum
                 repellendus culpa nemo consectetur modi.</p>
             <a target="_blank" class="hire-btn" href="https://www.linkedin.com/in/md-asaduzzaman-1a845222a/">HAIRE
@@ -47,7 +47,7 @@
             <p> I alrady learned the basic HTML and CSS. I can bild any simple website. i can even teah
                 ch my grandma how to make website .may gole is to build 3 website and learn advance topic
             </p>
-
+            <a class="hire-btn" target='_blank' href="">DOUNLODE RESUME</a>
         </div>
 
 
