--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
             <a class="hire-btn" target='_blank' href="">DOUNLODE RESUME</a>
         </div>
 
+    </section>
+    <section class='card-section'>
+        <h2 class="heding">expariences</h2>
+
+        <div class="card-container">
+            <div class=' red-borderr  experiance-item'>
+                <h1 class="exp-name">Full stack web developer </h1>
+                <h3 class="orange_class">2020-present | pro lavel Developer</h3>
+                <p>I am the master of HTML,CSS and javascript. I know everithing needed to make aa website Lorem ipsum
+                    dolor
+                    sit amet consectetur adipisicing elit. Beatae voluptas praesentium fugit quaerat consequuntur
+
+            </div>
+            <div class=' blue-border experiance-item'>
+                <h1 class="exp-name">Baby web developer </h1>
+                <h3 class=" orange_class">2019-2020 | programing Hero Learner</h3>
+                <p>They domt offer me a job. But i made myself as a remote web developer. i made thire website amet
+                    m consectetur adipisicing elit. Beatae voluptas praesentium fugit quaerat consequuntur tenetur
+            </div>
+        </div>
+
 
     </section>
 
