--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p> I alrady learned the basic HTML and CSS. I can bild any simple website. i can even teah
                 ch my grandma how to make website .may gole is to build 3 website and learn advance topic
             </p>
-            <a class="hire-btn" target='_blank' href="">DOUNLODE RESUME</a>
+            <a class="hire-btn" target='_blank' href="">DOWNLODE RESUME</a>
         </div>
 
     </section>
@@ -55,7 +55,9 @@
         <h2 class="heding">expariences</h2>
 
         <div class="card-container">
-            <div class=' red-borderr  experiance-item'>
+
+
+            <div class='red-borderr  experiance-item'>
                 <h1 class="exp-name">Full stack web developer </h1>
                 <h3 class="orange_class">2020-present | pro lavel Developer</h3>
                 <p>I am the master of HTML,CSS and javascript. I know everithing needed to make aa website Lorem ipsum
@@ -73,7 +75,9 @@
 
 
     </section>
-
+    <footer>
+        <p class='footerClaass'>Copyright &copy; 2022 Asaduzzaman </p>
+    </footer>
 
 
 </body>
